Compiler/tests/bad/Ifs/06_ifs.rs
// wrong condition type

fn main(){
    let x:i32 = 42;
    if(50){
        println!(x);
    } else {
        println!(23);
    }
}